Fixing alignment lists

--- a/app/assets/stylesheets/components/_list.scss
+++ b/app/assets/stylesheets/components/_list.scss
@@ -69,6 +69,10 @@ ul li {
   text-decoration: none;
 }
 
+#ul-list {
+  padding-left: 0;
+}
+
 ul:hover li {
   color: #0002;
 }
